syntax = "proto3";

package FSR.DigitalTwin.App.GRPC;

//package FSR.DigitalTwin.App.GRPC;

// Define the gRPC service
service PoseService {
  rpc SendPoseData (PoseData) returns (PoseResponse);
}

message PoseData {
  repeated Landmark landmarks = 1;         
  repeated WorldLandmark worldLandmarks = 2;
}

message Landmark {
  float x = 1;           
  float y = 2;           
  float z = 3;           
}

message WorldLandmark {
  float x = 1;  
  float y = 2;  
  float z = 3;  
}

message PoseResponse {
  string message = 1;
}
